k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant-api
  labels:
    name: restaurant-api
    environment: production
