k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: restaurant-api
  labels:
    app: mongo
spec:
  type: ClusterIP
  clusterIP: None  # Headless service pour StatefulSet
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongo
  selector:
    app: mongo
